2004-01-27  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* lily/beam.cc (least_squares): also set least-squares-dy for
	special case of slanted 2-stem beam to center.

	* lily/side-position-interface.cc (out_of_staff): move contents of
	out_of_staff into aligned_side.
	remove out_of_staff().

	* input/regression/measure-grouping.ly: fix warning.

	* lily/side-position-interface.cc: add staff-padding support to
	Side_position_interface::aligned_side.

	* lily/system-start-delimiter-engraver.cc (process_music): whoops,
	one get_property too many.

	* flower/include/drul-array.hh (linear_combination): new function
	(scale_drul): new function

	* lily/beam.cc: use Drul_array<Real> iso. interval, because *=
	operations on empty intervals are silly.

2004-01-26  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/note-heads-engraver.cc (process_music): use robust_scm2int
	(iso gh_scm2int), fixes crash in new part-combiner.

	* configure.in: Up mftrace to 1.0.27.

2004-01-26  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* lily/lyric-phrasing-engraver.cc (stop_translation_timestep):
	align all stanza numbers.

2004-01-26  Heikki Junes <hjunes@cc.hut.fi>

	* Documentation/user/{introduction.itely,refman.itely,
	converters.itely}: fix some text inside parentheses; text should
	be readable (even) if parentheses are either replaced with commas 
	or dropped out.

2004-01-25  Werner Lemberg  <wl@gnu.org>

	* buildscripts/lilypond.words.py, input/puer-fragment.ly,
	input/test/vaticana.ly, input/test/ancient-font.ly,
	input/test/mensural-ligatures.ly, input/test/gregorian-scripts.ly,
	lily/include/staff-symbol.hh, lily/breathing-sign.cc,
	ly/params-as-init.ly, scm/define-grobs.scm,
	scm/define-grob-properties.scm: s/stafflinethickness/linethickness/.

	* ly/params-as-init.ly: Removed.  Obsolete.
	* buildscripts/lilypond.words.py: Updated.

2004-01-25  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* mf/parmesan-clefs.mf: switch off mensural G clefs.

	* mf/feta-din{4,5,7,9}.mf: remove.
	