@@ -299,9 +299,10 @@ New_fingering_engraver::stop_translation_timestep ()
       
       SCM follow = scm_assoc (ly_symbol2scm ("follow-into-staff"), articulations_[i].description_);
       if (gh_pair_p (follow) && to_boolean (gh_cdr (follow)))
-	sc->add_offset_callback (Side_position_interface::quantised_position_proc, Y_AXIS);
-      else
-	Side_position_interface::add_staff_support (sc);
+	{
+	  sc->add_offset_callback (Side_position_interface::quantised_position_proc, Y_AXIS);
+	  sc->set_grob_property ("staff-padding" , SCM_EOL);
+	}
       typeset_grob (sc);
     }
 
