@@ -377,10 +377,6 @@ Description of scripts. This is used by Script_engraver for typesetting note-sup
 				 "If a multimeasure rest takes less
 than this number of measures, no number is printed. ")
 
-(translator-property-description 'scriptHorizontal boolean? "  Put
-scripts left or right of note heads.  Support for this is limited.
-Accidentals will collide with scripts.
-")
 (translator-property-description 'skipBars boolean? "If set to true, then
 skip the empty bars that are produced by multimeasure notes and rests.
 These bars will not appear on the printed output.  If not set (the
