@@ -1,5 +1,15 @@
 2004-01-27  Han-Wen Nienhuys   <hanwen@xs4all.nl>
 
+	* lily/side-position-interface.cc: remove add_staff_support ()
+	Change all callers to use staff-padding.
+
+	* lily/auto-beam-engraver.cc (create_beam): opps. Don't use
+	make_spanner().
+
+	* lily/a2-engraver.cc (process_acknowledged_grobs): 
+
+	* lily/text-engraver.cc: remove scriptHorizontal property.
+
 	* lily/beam.cc (least_squares): also set least-squares-dy for
 	special case of slanted 2-stem beam to center.
 
